# bevy-lessons

./: .aiignore  AGENTS.md  Cargo.toml  README.md
.codex/: README.md
.codex/skills/: README.md
.codex/skills/create-lesson/: SKILL.md
.codex/skills/create-lesson/agents/: openai.yaml
.codex/skills/create-lesson/scripts/: create_lesson.py
Bevy/Crates/Lesson_01_NoPlugins/: Cargo.toml
Bevy/Crates/Lesson_01_NoPlugins/src/: main.rs
Bevy/Crates/Lesson_02_NoPluginsComponent/: Cargo.toml
Bevy/Crates/Lesson_02_NoPluginsComponent/src/: main.rs
Bevy/Crates/Lesson_02_NoPluginsComponent/src/Components/: LogComponent.rs
Bevy/Crates/Lesson_02_NoPluginsComponent/src/Systems/: LogSystem.rs
Bevy/Crates/Lesson_03_SomePlugins/: Cargo.toml
Bevy/Crates/Lesson_03_SomePlugins/src/: main.rs
Bevy/Crates/Lesson_03_SomePlugins/src/Plugins/: SomePlugins.rs
Bevy/Crates/Lesson_04_DefaultPlugins/: Cargo.toml
Bevy/Crates/Lesson_04_DefaultPlugins/src/: main.rs
Bevy/Crates/Lesson_05_Basic2D/: Cargo.toml
Bevy/Crates/Lesson_05_Basic2D/src/: main.rs
Bevy/Crates/Lesson_05_Basic2D/src/Components/: PlayerComponent.rs
Bevy/Crates/Lesson_05_Basic2D/src/Systems/: PlayerSystem.rs
Bevy/Crates/Lesson_06_Basic3D/: Cargo.toml
Bevy/Crates/Lesson_06_Basic3D/src/: main.rs
Bevy/Crates/Lesson_06_Basic3D/src/Components/: PlayerComponent.rs
Scripts/Common/: Install_Dependencies.ps1  Run_Lesson_01_NoPlugins.ps1  Run_Lesson_02_NoPluginsComponent.ps1  Run_Lesson_03_SomePlugins.ps1  Run_Lesson_04_DefaultPlugins.ps1  Run_Lesson_05_Basic2D.ps1  Run_Lesson_06_Basic3D.ps1
(+1 files in other folders)
