[workspace]
members = [
    "Bevy/Crates/Lesson_01_NoPlugins",
    "Bevy/Crates/Lesson_02_NoPluginsComponent",
    "Bevy/Crates/Lesson_03_SomePlugins",
    "Bevy/Crates/Lesson_04_DefaultPlugins",
    "Bevy/Crates/Lesson_05_Basic2D",
    "Bevy/Crates/Lesson_06_Basic3D",
]
resolver = "3"

# Bevy's recommended dev settings: keep local crate rebuilds quick while
# compiling dependencies with enough optimization for usable runtime speed.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
